<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/material_margin_super_small"
    android:layout_marginVertical="@dimen/material_margin_super_small"
    >

    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
        android:layout_margin="@dimen/material_margin_small"
       />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin_small"
        android:layout_marginBottom="@dimen/material_margin_large"
        android:layout_marginTop="@dimen/material_margin_large"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:text="@string/type_scheme_card"
                android:gravity="left"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/material_margin_normal"
                />
            <TextView
                android:id="@+id/scheme_item"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/placeholder"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginEnd="@dimen/material_margin_normal"
                android:gravity="left"
                android:text="@string/brand_card"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/brand_item"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/placeholder"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginEnd="@dimen/material_margin_normal"
                android:gravity="left"
                android:text="@string/card_number"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/number_item"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/placeholder"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/type_card"
                android:gravity="left"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/material_margin_normal"
                />
            <TextView
                android:id="@+id/type_item"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/placeholder"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginEnd="@dimen/material_margin_normal"
                android:gravity="left"
                android:text="@string/prepaid"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/prepaid_item"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/placeholder"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginEnd="@dimen/material_margin_normal"
                android:gravity="left"
                android:text="@string/country"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/country_item"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/placeholder"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginEnd="@dimen/material_margin_normal"
                android:gravity="left"
                android:text="@string/bank"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/bank_item"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/placeholder"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginEnd="@dimen/material_margin_normal"
                android:gravity="left"
                android:text="@string/bank_phone"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/bank_phone"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/placeholder"
                />
        </TableRow>
    </TableLayout>
</RelativeLayout>