<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/simple_request"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginVertical="20dp"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/idRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin = "6dp"
        android:text= "@string/id_request" />
    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin = "6dp"
        android:text="@string/country" />
    <TextView
        android:id="@+id/scheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin = "6dp"
        android:text="@string/type_scheme_card" />

    <TextView
        android:id="@+id/bankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin = "6dp"
        android:text="@string/bank" />
</LinearLayout>