<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_margin_small"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/aim" />

    <LinearLayout
        android:id="@+id/request_horizontal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="@dimen/material_margin_small"
        android:layout_margin="@dimen/material_margin_small"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/material_margin_small"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/bin"
            android:inputType="number"
            android:minHeight="48dp"
             />

        <Button
            android:id="@+id/buttonStartRequest"
            android:layout_margin="@dimen/material_margin_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_request" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_vertical_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/request_horizontal_layout"
        android:layout_marginTop="@dimen/material_margin_small"
        android:layout_margin="@dimen/material_margin_small"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_text" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin_small"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:text="@string/type_scheme_card"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/material_margin_normal"
                    />
                <TextView
                    android:id="@+id/scheme"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/placeholder"
                    />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_marginEnd="@dimen/material_margin_normal"
                    android:gravity="left"
                    android:text="@string/brand_card"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/brand"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/placeholder"
                    />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_marginEnd="@dimen/material_margin_normal"
                    android:gravity="left"
                    android:text="@string/card_number"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/number"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/placeholder"
                    />
        </TableRow>

            <TableRow>

            <TextView
                android:text="@string/type_card"
                android:gravity="left"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/material_margin_normal"
                />
                <TextView
                    android:id="@+id/type"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/placeholder"
                    />
        </TableRow>

            <TableRow>

                <TextView
                    android:layout_marginEnd="@dimen/material_margin_normal"
                    android:gravity="left"
                    android:text="@string/prepaid"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/prepaid"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/placeholder"
                    />
        </TableRow>

            <TableRow>

                <TextView
                    android:layout_marginEnd="@dimen/material_margin_normal"
                    android:gravity="left"
                    android:text="@string/country"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/country"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/placeholder"
                    />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_marginEnd="@dimen/material_margin_normal"
                    android:gravity="left"
                    android:text="@string/bank"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/bank"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/placeholder"
                    />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_marginEnd="@dimen/material_margin_normal"
                    android:gravity="left"
                    android:text="@string/bank_phone"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/bank_phone"
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/placeholder"
                    />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/save_request_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin_large"
            android:text="@string/save_request" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/save_request_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:layout_marginTop="@dimen/material_margin_small"
            tools:listitem="@layout/simple_request"/>
    </LinearLayout>
</RelativeLayout>